[package]
name = "reestream"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10"
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "rustls-tls",
    "system-proxy",
    "http2",
] }
rml_rtmp = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", default-features = false, features = [
    "io-std",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
    "signal",
    "sync",
] }
tokio-native-tls = "0.3"
toml = "0.9"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
url = { version = "2.5", features = ["serde"] }
