[package]
name = "reestream"
version = "0.1.1"
edition = "2024"
authors = ["RustLangES contact@rustlang-es.org"]
description = "rtmp multistream demuxer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RustLangES/reestream"

[dependencies]
bytes = "1.10"
clap = { version = "4.5.54", features = ["derive"] }
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "rustls-tls",
    "system-proxy",
    "http2",
] }
rml_rtmp = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", default-features = false, features = [
    "io-std",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
    "signal",
    "sync",
] }
tokio-native-tls = "0.3"
toml = "0.9"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
thiserror = "2"
tokio-test = "0.4"
